--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
   <div class="container">
     <div class="row">
-       <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url ("../images/HarmfulBacteria_web.jpg");
-        <h1>Belly Button Biodiversity Dashboard</h1>
+       <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url ("/images/HarmfulBacteria_web.jpg");
+       background-size: cover; background-position: center; color: white"> 
+       <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
