--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
 
+  <div class="wrapper"></div>
   <div class="container">
     <div class="row">
        <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url ("/https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nutraingredients.com%2FArticle%2F2019%2F10%2F04%2FGut-health-affected-by-teams-of-bacteria-not-individual-species&psig=AOvVaw0MBT4ZpsBeHqmei8fTkfx4&ust=1616262848081000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPiz4rn2vO8CFQAAAAAdAAAAABAK");
