--- a/Resources/data-12-4-3-resources/index.html
+++ b/Resources/data-12-4-3-resources/index.html
@@ -11,10 +11,12 @@
 
 <body>
 
+  <div class="wrapper"></div>
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
+       <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url ("/https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.nutraingredients.com%2FArticle%2F2019%2F10%2F04%2FGut-health-affected-by-teams-of-bacteria-not-individual-species&psig=AOvVaw0MBT4ZpsBeHqmei8fTkfx4&ust=1616262848081000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCPiz4rn2vO8CFQAAAAAdAAAAABAK");
+       background-size: cover; background-position: center; color: white"> 
+       <h1>Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
