--- a/Resources/data-12-4-3-resources/index.html
+++ b/Resources/data-12-4-3-resources/index.html
@@ -10,16 +10,16 @@
 </head>
 
 <body>
-
   <div class="wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url("https://cdn-a.william-reed.com/var/wrbm_gb_food_pharma/storage/images/publications/food-beverage-nutrition/nutraingredients.com/article/2019/10/04/gut-health-affected-by-teams-of-bacteria-not-individual-species/10214854-1-eng-GB/Gut-health-affected-by-teams-of-bacteria-not-individual-species_wrbm_large.jpg");
-          <h1>Belly Button Biodiversity Dashboard</h1>
+        <div class="col-xs-12 col-sm-12 col-md-12 jumbotron text-center" style="background-image: url("../images/Gut-health-affected-by-teams-of-bacteria-not-individual-species_wrbm_large.jpg");
+        background-size: cover; background-position: center; color: white">   
+        <h1>Belly Button Biodiversity Dashboard</h1>
           <p>Use the interactive charts below to explore the dataset</p>
         </div>
     </div>
-    
+
     <div class="row">
       <div class="col-md-2">
         <div class="well">
@@ -47,11 +47,12 @@
       </div>
     </div>
   </div>
+</div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
   <script src="plots.js"></script>
-
+  
 </body>
 
 </html>
